<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        >
        <TextView
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:text="@string/edit_task"
            android:id="@+id/edit_task_header"
            android:textSize="30sp"
            android:background="@color/colorPrimary"
            android:textAlignment="textStart"
            android:textColor="#ffffff" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="0dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=  "@string/task_category"
            android:id="@+id/task_category_text"
            android:layout_weight="0.43"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/cleaning"
            android:id="@+id/radio_cleaning"
            android:layout_gravity="right"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="-30dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/electricity"
            android:id="@+id/radio_elctrecity"
            android:layout_gravity="right"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/computers"
            android:id="@+id/radio_computers"
            android:layout_gravity="right"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/general"
            android:id="@+id/radio_general"
            android:layout_gravity="right"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:id="@+id/radio_other"
            android:layout_gravity="right"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="20dp"
            />
        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text=  "@string/task_priority"
            android:id="@+id/task_priority"
            android:textSize="25sp"
            android:textColor="#000000"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:id="@+id/radio_low"
            android:layout_gravity="right"
            android:layout_marginTop="-30dp"
            android:textSize="25sp"
            android:checked="false" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:id="@+id/radio_normal"
            android:layout_gravity="right"
            android:checked="false"
            android:textSize="25sp"
            android:layout_marginTop="20dp" />

        <RadioButton
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:text="@string/urgent"
            android:id="@+id/radioButton"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:checked="false"
            android:textSize="25sp" />

        <View
            android:layout_width="150dp"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_gravity="right"
            android:layout_marginRight="50dp"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Room:"
            android:id="@+id/Task_location"
            android:layout_weight="0.19"
            android:textSize="25dp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/editText"
            android:layout_gravity="right"
            android:layout_marginTop="-35dp"
            android:layout_marginRight="70dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Task Due Time:"
            android:id="@+id/task_time"
            android:layout_weight="0.19"
            android:textSize="25dp"
            android:textColor="#000000"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp" />
        <Button
            android:layout_width="75dp"
            android:layout_height="wrap_content"
            android:text="time"
            android:onClick="showTimePickerDialog"
            android:id="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_gravity="right"
            android:layout_marginTop="-40dp"
            android:layout_marginRight="100dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="date"
            android:onClick="showDatePickerDialog"
            android:layout_gravity="right"
            android:layout_marginTop="-49dp"
            android:layout_marginRight="10dp" />
    </LinearLayout>
</ScrollView>