<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ac.shenkar.software.doit.activities.CreateTeamActivity"
    android:background="@color/colorPrimary">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/settings_text"
        android:paddingBottom="15dp"
        android:id="@+id/setting_page_header"
        android:textSize="50sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:paddingLeft="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/setting_page_header"
        android:orientation="vertical"
        android:background="#ffffff"
        android:id="@+id/settings_page_layout">


        <LinearLayout
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/setting_update_label"
                android:textSize="20sp"
                android:text="@string/update_every"/>
            <EditText
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/settings_update_every_input"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/seconds"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/settings_save_button"
                android:layout_centerInParent="true"
                android:onClick="onSaveSettings"
                android:text="@string/save"/>
        </RelativeLayout>



    </LinearLayout>

</RelativeLayout>
