<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.LogInActivity"
    android:background="#467FD7">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/do_it_name"
        android:layout_marginTop="36dp"
        android:textColor="#ffffff"
        android:textSize="50dp"
        android:id="@+id/logo_doit"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/user_name"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:id="@+id/user_name_field"
        android:layout_marginTop="60dp"
        android:background="#ffffff"
        android:layout_below="@+id/logo_doit"
        android:layout_centerHorizontal="true" />

    <EditText
        android:inputType="textPassword"
        android:singleLine="true"
        android:gravity="center"
        android:hint="@string/password_field"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:id="@+id/password_field"
        android:background="#ffffff"
        android:layout_below="@+id/user_name_field"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/sign_up_button"
        android:layout_alignParentBottom="false"
        android:layout_marginBottom="65dp"
        android:layout_alignLeft="@+id/password_field"
        android:layout_alignStart="@+id/password_field"
        android:layout_alignRight="@+id/password_field"
        android:layout_alignEnd="@+id/password_field"
        android:background="#2196F3"
        android:textColor="#ffffff"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password_field" />

    <TextView
        android:textColor="#ffffff"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:id="@+id/admin_text"
        android:layout_below="@+id/logo_doit"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
