<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="ac.shenkar.software.doit.activities.WaitingTasksActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">


        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/waiting_tasks_list"
            android:id="@+id/waiting_list_button"
            android:layout_weight="0.5"
            android:contextClickable="false"
            android:background="#3d74d2"
            android:textColor="#ffffff"
            android:onClick="moveToWaitingTasks" />

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:text="@string/all_tasks_list"
            android:id="@+id/all_tasks_button"
            android:layout_weight="0.5"
            android:background="#3d74d2"
            android:onClick="moveToAllTasks" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#5788d9"
        android:id="@+id/tasks_sort_spinner_layout">
        
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/arrange_tasks_spinner"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"></Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/waiting_tasks_counter_label"
                android:id="@+id/waiting_list_counter_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/waiting_list_counter" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_task"
            android:visibility="gone"
            android:id="@+id/empty_task"
            android:layout_gravity="center_horizontal" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/button"
                android:text="@string/update_list"
                android:gravity="center"
                android:onClick="refreshListButtonClicked" />

        </RelativeLayout>

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh_layout_waiting_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/task_list_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:onClick="addNewTaskButtonClicked" />
        </android.support.v4.widget.SwipeRefreshLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="-65dp">

            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@drawable/plus_icon"
                android:layout_alignParentRight="true"
                android:id="@+id/add_task_button"
                android:layout_marginTop="0dp"
                android:nestedScrollingEnabled="false"
                android:onClick="addNewTaskButtonClicked"
                android:contentDescription="" />
        </RelativeLayout>


    </LinearLayout>

</LinearLayout>
